[gd_scene load_steps=3 format=3 uid="uid://buogrgbwrud4m"]

[ext_resource type="Script" path="res://systems/dungeon_exploration/nodes/event_node.gd" id="1_tclkl"]
[ext_resource type="Texture2D" uid="uid://m5j0j0sgyaew" path="res://assets/ui/nodemap/underlay_available.png" id="2_g7h40"]

[node name="EventNode" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
script = ExtResource("1_tclkl")
lookahead = 1
disabledColor = Color(0.364706, 0.364706, 0.364706, 1)
dashed_width = 12.0
offset = 66.0

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
texture = ExtResource("2_g7h40")

[node name="icon" type="TextureRect" parent="background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
mouse_filter = 2

[node name="ClickArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2

[connection signal="mouse_entered" from="ClickArea" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_mouse_exited"]
